# squadbot

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  main.tf  outputs.tf  run.sh  squadbot.Dockerfile
src/: add_member.rs  embed.rs  main.rs  member.rs  notify.rs  options.rs  redis_core.rs  redis_io.rs  squad.rs  squad_command.rs
