[package]
name = "squadbot"
version = "0.1.0"
edition = "2021"

[dependencies]
typemap_rev = "0.1.5"
rand = "0.8.5"
redis = "0.21.5"
chrono = "0.4.19"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "utils", "cache"]
version = "0.11"